--- a/src/Web/Views/Shared/_Layout.cshtml
+++ b/src/Web/Views/Shared/_Layout.cshtml
@@ -49,6 +49,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="My" asp-action="Joke">Joke</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="My" asp-action="Index1">Print Even or Odd</a>
+                        </li>
                     </ul>
                 </div>
             </div>
